# NoDox

./: .env.example  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  QUICKSTART.md  README.md  WINDOWS_TROUBLESHOOTING.md  build_exe.bat  build_exe.sh  docker-compose.yml  generate_key.bat  generate_key.py  nodox.py  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.py  setup.sh
nodox/: __main__.py
nodox/config/: exclusions.txt  nodox.yaml
nodox/core/: canary.py  config_loader.py  decryptor.py  encryptor.py  exfil.py  logger.py  protect.py  scanner.py
